# rsomics-local-efficiency

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: local_efficiency.rs
src/: lib.rs  main.rs
tests/: compat.rs
tests/golden/: gnm_100_500_seed10.txt  gnm_100_500_seed20.txt  gnm_50_200_seed1.txt  gnm_50_200_seed2.txt  gnm_50_200_seed3.txt  gnm_50_200_seed42.txt  gnm_50_200_seed7.txt  selfloop_case1.txt  selfloop_case2.txt  selfloop_case3.txt  selfloop_case4.txt
